# robocup_ui_rust

./: .bash_history  .dockerignore  .gitignore  BUILD_INSTRUCTIONS.md  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  test_publisher.sh  vite.config.ts
.cache/mesa_shader_cache_db/part0/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part1/: mesa_cache.idx
.cache/mesa_shader_cache_db/part10/: mesa_cache.idx
.cache/mesa_shader_cache_db/part11/: mesa_cache.db
.cache/mesa_shader_cache_db/part12/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part13/: mesa_cache.db
.cache/mesa_shader_cache_db/part14/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part15/: mesa_cache.db
.cache/mesa_shader_cache_db/part16/: mesa_cache.idx
.cache/mesa_shader_cache_db/part17/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part18/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part19/: mesa_cache.idx
.cache/mesa_shader_cache_db/part2/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part20/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part21/: mesa_cache.db
.cache/mesa_shader_cache_db/part22/: mesa_cache.idx
.cache/mesa_shader_cache_db/part23/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part24/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part25/: mesa_cache.idx
.cache/mesa_shader_cache_db/part26/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part27/: mesa_cache.db
.cache/mesa_shader_cache_db/part28/: mesa_cache.idx
.cache/mesa_shader_cache_db/part29/: mesa_cache.db
.cache/mesa_shader_cache_db/part3/: mesa_cache.db  mesa_cache.idx
.cache/mesa_shader_cache_db/part30/: mesa_cache.db
.ccache/0/: stats
.ccache/0/9/: stats  (+4 more)
.ccache/1/: stats
.ccache/2/: stats
.ccache/3/: stats
.ccache/4/: stats
.ccache/5/: stats
.ccache/6/: stats
.ccache/7/: stats
.ccache/8/: stats
.ccache/9/: stats
.ccache/a/: stats
.ccache/b/: stats
.ccache/c/: stats
.ccache/d/: stats
.ccache/e/: stats
.ccache/f/: stats
.config/ros.org/: rqt_gui.ini
ros2_ws/.cargo/: config.toml
src/: App.tsx
src-tauri/: Cargo.toml  package.xml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+1332 files in other folders)
