[package]
name = "robot_ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "robot_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rclrs = { path = "/root/ros2_ws/install/rclrs/share/rclrs/rust" }
std_msgs = { path = "/root/ros2_ws/install/std_msgs/share/std_msgs/rust" }
sensor_msgs = { path = "/root/ros2_ws/install/sensor_msgs/share/sensor_msgs/rust" }
anyhow = "1"
base64 = "0.22"

[patch.crates-io]
builtin_interfaces = { path = "/root/ros2_ws/install/builtin_interfaces/share/builtin_interfaces/rust" }
std_msgs = { path = "/root/ros2_ws/install/std_msgs/share/std_msgs/rust" }
geometry_msgs = { path = "/root/ros2_ws/install/geometry_msgs/share/geometry_msgs/rust" }
service_msgs = { path = "/root/ros2_ws/install/service_msgs/share/service_msgs/rust" }
action_msgs = { path = "/root/ros2_ws/install/action_msgs/share/action_msgs/rust" }
unique_identifier_msgs = { path = "/root/ros2_ws/install/unique_identifier_msgs/share/unique_identifier_msgs/rust" }
